fix: fix shift and capslock keydown event function; fix keydown buttons functions

--- a/virtual-keyboard/style.css
+++ b/virtual-keyboard/style.css
@@ -36,7 +36,7 @@ body {
   display: block;
   margin: 0 auto;
   padding: 1.5rem;
-  width: 850px;
+  width: 830px;
   background-color: rgba(255, 255, 255, 0.507);
   border-radius: 20px;
   z-index: 100;
